--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+/*start section-image*/
 <section class="section-image">
     <div class="container">
         <h3>Lorem ipsum dolor sit.</h3>
@@ -33,18 +35,47 @@
         </div>
     </div>
 </section>
-<!--<section class="section-text">-->
-<!--    <div class="container">-->
-<!--        <h3>Lorem ipsum dolor sit.</h3>-->
-<!--        <div class="image-line">-->
-<!--            <img src="images/line.png">-->
-<!--        </div>-->
-<!--        <div class="text">-->
-<!--            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolor iste magni! Aliquid aperiam,-->
-<!--                debitis impedit labore, molestias nostrum odio pariatur placeat possimus provident sapiente velit vero-->
-<!--                vitae voluptates, voluptatibus.</p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+/*start section-text*/
+<section class="section-text">
+    <img class="flower-1" src="images/flower-1.png">
+    <img class="flower-2" src="images/flower-2.png">
+    <div class="container">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <div class="image-line">
+            <img src="images/line.png">
+        </div>
+        <div class="text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolor iste magni! Aliquid aperiam,
+                debitis impedit labore, molestias nostrum odio pariatur placeat possimus provident sapiente velit vero
+                vitae voluptates, voluptatibus.</p>
+        </div>
+    </div>
+</section>
+/*start section-style*/
+<section class="section-style">
+    <img class="flower-3" src="images/flower-3.png">
+    <img class="flower-4" src="images/flower-4.png">
+    <div class="container">
+        <div class="article article-left">
+            <h1>Style</h1>
+            <p>Lorem ipsum dolor sit amet?</p>
+            <button>COMMENCER</button>
+        </div>
+        <div class="article article-right">
+            <h1>Mariage</h1>
+            <p>Lorem ipsum dolor sit amet?</p>
+            <button>VOIR REPONSE</button>
+        </div>
+    </div>
+</section>
+/*start section social-media*/
+<section class="social-media">
+    <div class="image-line">
+        <img src="images/line.png">
+    </div>
+    <div class="container">
+        <a href="#"><i class="fa fa-instagram"></i></a>
+    </div>
+</section>
 </body>
 </html>
