--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-/*start section-image*/
+<!--start section-image-->
 <section class="section-image">
     <div class="container">
         <h3>Lorem ipsum dolor sit.</h3>
@@ -35,7 +35,7 @@
         </div>
     </div>
 </section>
-/*start section-text*/
+<!--start section-text-->
 <section class="section-text">
     <img class="flower-1" src="images/flower-1.png">
     <img class="flower-2" src="images/flower-2.png">
@@ -51,7 +51,7 @@
         </div>
     </div>
 </section>
-/*start section-style*/
+<!--start section-style-->
 <section class="section-style">
     <img class="flower-3" src="images/flower-3.png">
     <img class="flower-4" src="images/flower-4.png">
@@ -68,7 +68,7 @@
         </div>
     </div>
 </section>
-/*start section social-media*/
+<!--start section social-media-->
 <section class="social-media">
     <div class="image-line">
         <img src="images/line.png">
